build: main section - spotify clone

--- a/5. spotify-home-clone/src/index.html
+++ b/5. spotify-home-clone/src/index.html
@@ -25,16 +25,16 @@
                                     <a href="#" class="hover:text-hoverspt text-sm">Premium</a>
                                 </li>
                                 <li class="px-4">
-                                    <a href="#" class="hover:text-hoverspt text-sm">Ajuda</a>
+                                    <a href="#" class="hover:text-hoverspt text-sm">Support</a>
                                 </li>
                                 <li class="px-4">
-                                    <a href="#" class="hover:text-hoverspt text-sm">Baixar</a>
+                                    <a href="#" class="hover:text-hoverspt text-sm">Download</a>
                                 </li>
                                 <li class="px-4">
                                     <span class="border-r border-white"></span>
                                 </li>
                                 <li class="px-4">
-                                    <a href="#" class="hover:text-hoverspt text-sm">Inscrever-se</a>
+                                    <a href="#" class="hover:text-hoverspt text-sm">Sign up</a>
                                 </li>
                                 <li class="px-4">
                                     <a href="#" class="hover:text-hoverspt text-sm">Log in</a>
@@ -45,5 +45,12 @@
                 </div>
             </div>
         </header>
+        <main>
+            <div class="flex flex-col justify-center text-center bg-spotify-theme-mobile md:bg-spotify-theme bg-banner-mobile md:bg-banner bg-195% md:bg-175% bg-purple-main text-green-main px-4 py-40">
+                <h1 class="text-5xl md:text-9xl mb-10 font-bold max-w-4xl mx-auto leading-none">Listening is everything</h1>
+                <p class="text-base md:text-lg mb-10 font-semibold  ">Millions of songs and podcasts. No credit card needed.</p>
+                <a href="#" class="bg-green-main hover:bg-white text-purple-main text-sm rounded-full px-10 py-3 uppercase font-bold max-w-xl mx-auto tracking-widest transition duration-500">Get Spotify Free</a>
+            </div>
+        </main>
     </body>
 </html>
