build: footer - spotify clone

--- a/5. spotify-home-clone/src/index.html
+++ b/5. spotify-home-clone/src/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <div class="flex bg-black w-full px-3 md:px-20 py-4">
+            <div class="flex fixed bg-black w-full px-3 md:px-20 py-4">
                 <div class="container flex items-center mx-auto">
                     <div>
                         <a href="#"><img src="./img/spotify-logo.png" alt="Logo Spotify" class="w-20 md:w-125px"></a>
@@ -48,9 +48,67 @@
         <main>
             <div class="flex flex-col justify-center text-center bg-spotify-theme-mobile md:bg-spotify-theme bg-banner-mobile md:bg-banner bg-195% md:bg-175% bg-purple-main text-green-main px-4 py-40">
                 <h1 class="text-5xl md:text-9xl mb-10 font-bold max-w-4xl mx-auto leading-none">Listening is everything</h1>
-                <p class="text-base md:text-lg mb-10 font-semibold  ">Millions of songs and podcasts. No credit card needed.</p>
+                <p class="text-base md:text-lg mb-10 font-semibold">Millions of songs and podcasts. No credit card needed.</p>
                 <a href="#" class="bg-green-main hover:bg-white text-purple-main text-sm rounded-full px-10 py-3 uppercase font-bold max-w-xl mx-auto tracking-widest transition duration-500">Get Spotify Free</a>
             </div>
         </main>
+        <footer>
+            <div class="grid grid-cols-1 md:grid-cols-6 bg-black text-white p-4 md:p-20">
+                <div class="md:col-span-1 pt-10 md:pt-0">
+                    <a href="#">
+                        <img src="../src/img/spotify-logo.png" alt="Spotify logo" class="w-20 md:w-125px">
+                    </a>
+                </div>
+                <div class="md:col-span-1 pt-10 md:pt-4">
+                    <h3 class="uppercase text-gray-400 font-bold text-xs tracking-widest mb-5">Company</h3>
+                    <ul>
+                        <li class="mb-2 font-semibold"><a href="#">About</a></li>
+                        <li class="mb-2 font-semibold"><a href="#">Jobs</a></li>
+                        <li class="mb-2 font-semibold"><a href="#">For the Record</a></li>
+                    </ul>
+                </div>
+                <div class="md:col-span-1 pt-10 md:pt-4">
+                    <h3 class="uppercase text-gray-400 font-bold text-xs tracking-widest mb-5">Communities</h3>
+                    <ul>
+                        <li class="mb-2 font-semibold"><a href="#">For Artists</a></li>
+                        <li class="mb-2 font-semibold"><a href="#">Developers</a></li>
+                        <li class="mb-2 font-semibold"><a href="#">Advertising</a></li>
+                        <li class="mb-2 font-semibold"><a href="#">Investors</a></li>
+                        <li class="mb-2 font-semibold"><a href="#">Vendors</a></li>
+                    </ul>
+                </div>
+                <div class="md:col-span-1 pt-10 md:pt-4">
+                    <h3 class="uppercase text-gray-400 font-bold text-xs tracking-widest mb-5">Useful links</h3>
+                    <ul>
+                        <li class="mb-2 font-semibold"><a href="#">Support</a></li>
+                        <li class="mb-2 font-semibold"><a href="#">Web Player</a></li>
+                        <li class="mb-2 font-semibold"><a href="#">Free Mobile App</a></li>
+                    </ul>
+                </div>
+                <div class="md:col-span-2 pt-10 md:pt-4">
+                    <ul class="flex md:justify-end">
+                        <li class="flex items-center justify-center text-2xl bg-gray-900 w-12 h-12 rounded-full hover:text-green-main mx-2">
+                            <a href="#"><i class="fab fa-instagram"></i></a>
+                        </li>
+                        <li class="flex items-center justify-center text-2xl bg-gray-900 w-12 h-12 rounded-full hover:text-green-main mx-2">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        </li>
+                        <li class="flex items-center justify-center text-2xl bg-gray-900 w-12 h-12 rounded-full hover:text-green-main mx-2">
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="md:col-span-6 mt-20">
+                    <ul>
+                        <li class="inline-block text-xs text-gray-300 mr-4 font-semibold"><a href="#">Legal</a></li>
+                        <li class="inline-block text-xs text-gray-300 mr-4 font-semibold"><a href="#">Privacy Center</a></li>
+                        <li class="inline-block text-xs text-gray-300 mr-4 font-semibold"><a href="#">Privacy Policy</a></li>
+                        <li class="inline-block text-xs text-gray-300 mr-4 font-semibold"><a href="#">Cookies</a></li>
+                        <li class="inline-block text-xs text-gray-300 mr-4 font-semibold"><a href="#">About Ads</a></li>
+                        <li class="inline-block text-xs text-gray-300 mr-4 font-semibold"><a href="#">Additional CA Privacy Disclosures</a></li>
+                    </ul>
+                </div>  
+            </div>
+        </footer>
     </body>
 </html>
