--- a/8. background/src/index.html
+++ b/8. background/src/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <!-- bg-local inside scrow -->
-        <div class="h-48 p-4 overflow-auto my-3 bg-local" style="background-image: url('../img/peter-vanosdall-uZVtAixV8c8-unsplash.jpg');">
+        <div class="h-48 p-4 overflow-auto my-3 bg-local bg-paisage">
             <p class="font-bold p-3">Testing inside div</p>
             <p class="font-bold p-3">Testing inside div</p>
             <p class="font-bold p-3">Testing inside div</p>
@@ -19,7 +19,7 @@
         <p class="p-10">Testing</p>
         <p class="p-10">Testing</p>
         <!-- bg-fixed outside scrow -->
-        <div class="h-60 p-4 overflow-auto my-3 bg-fixed" style="background-image: url('../img/peter-vanosdall-uZVtAixV8c8-unsplash.jpg');">
+        <div class="h-60 p-4 overflow-auto my-3 bg-fixed bg-paisage">
             <p class="font-bold p-3">Testing inside div</p>
             <p class="font-bold p-3">Testing inside div</p>
             <p class="font-bold p-3">Testing inside div</p>
@@ -33,7 +33,7 @@
         <p class="p-10">Testing</p>
 
         <!-- background position -->
-        <div class="h-60 p-4 overflow-auto my-3 bg-center" style="background-image: url('../img/peter-vanosdall-uZVtAixV8c8-unsplash.jpg');">
+        <div class="h-60 p-4 overflow-auto my-3 bg-center bg-paisage">
             <p class="font-bold p-3">Testing inside div</p>
             <p class="font-bold p-3">Testing inside div</p>
             <p class="font-bold p-3">Testing inside div</p>
@@ -47,7 +47,7 @@
         <p class="p-10">Testing</p>
 
         <!-- background Size -->
-        <div class="h-60 p-4 overflow-auto my-3 bg-center bg-cover" style="background-image: url('../img/peter-vanosdall-uZVtAixV8c8-unsplash.jpg');">
+        <div class="h-60 p-4 overflow-auto my-3 bg-center bg-cover bg-paisage">
             <p class="font-bold p-3">Testing inside div</p>
             <p class="font-bold p-3">Testing inside div</p>
             <p class="font-bold p-3">Testing inside div</p>
@@ -59,5 +59,8 @@
         <p class="p-10">Testing</p>
         <p class="p-10">Testing</p>
         <p class="p-10">Testing</p>
+
+        <!-- Gradient color -->
+        <div class="h-60 p-4 m-6 bg-gradient-to-b from-blue-500 via-red-500 to-green-800"></div>
     </body>
 </html>
