--- a/9. facebook-login-clone/src/index.html
+++ b/9. facebook-login-clone/src/index.html
@@ -15,18 +15,146 @@
                         <img src="../src/imgs/logo_facebook.svg" alt="Facebook logo" class="w-30 mx-auto md:mx-0 md:w-290px md:-mb-4 md:-ml-8">
                         <p class="hidden md:flex text-subtitle leading-8">Connect with friends and the world around you on Facebook.</p>
                     </div>
-                    <div class="flex flex-col bg-white rounded md:w-396px md:place-self-end">
-                        <input type="text" placeholder="Email or phone number" class="mt-2.5 mb-2.5 rounded p-3 border-main-gray border-2">
-                        <input type="password" placeholder="Password" class="mb-2.5 rounded p-3 border-main-gray border-2">
-                        <button class="bg-main-blue text-white font-bold rounded py-1.5">Log In</button>
-                        <p class="text-main-blue text-center border-b-main-gray border-b-2">Forgot password?</p>
-                        <button class="bg-main-green text-white font-bold my-2 rounded">Create new account</button>
+                    <div class="md:w-396px md:place-self-end">
+                        <div class="bg-white p-4 md:border md:shadow-xl rounded-md">
+                            <form class="flex flex-col">
+                                <input type="text" placeholder="Email or phone number" class=" flex-1 p-3 mb-2 md:mb-3 rounded md:rounded-md border border-gray-300 bg-gray-200 md:bg-white text-sm md:text-base placeholder-gray-600 md:placeholder-gray-300">
+                                <input type="password" placeholder="Password" class=" flex-1 p-3 mb-3 rounded md:rounded-md border border-gray-300 bg-gray-200 md:bg-white text-sm md:text-base placeholder-gray-600 md:placeholder-gray-300">
+                                <input type="submit" value="Log In" class="flex-1 bg-main-blue hover:bg-main-blue-hover cursor-pointer text-white font-bold text-xl py-2 mb-3 rounded-md">
+                            </form>
+                            <div class="flex flex-col divide-y divide-gray-300 text-center mt-2 md:mt-0">
+                                <div class="pb-4 order-2 md:order-1">
+                                    <a href="#" class="text-blue-600 hover:underline">Forgot password?</a>
+                                </div>
+                                <div class="pb-6 pt-8 order-1 md:order-2">
+                                    <a href="#" class="bg-main-green hover:bg-main-green-hover text-white text-md md:text-lg font-semibold rounded px-4 py-3">Create new account</a href="#">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="hidden md:block text-sm mt-5 text-center">
+                            <p class="font-normal text-0.915rem"><a href="#" class="font-bold hover:underline">Create a Page</a> for a celebrity, brand or business.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </main>
         <footer>
-
+            <div class="md:w-980px mx-auto py-8 text-center md:text-current">
+                <div>
+                    <ul class="grid grid-cols-2 md:flex text-gray-600 text-xs md:text-sm">
+                        <li class="mr-3">
+                            <span>English (US)</span>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Français (Canada)</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Español</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Português (Brasil)</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Deustch</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Italiano</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="hidden md:block border-t border-gray-300 pt-3 mt-3"></div>
+                <div>
+                    <ul class="hidden md:flex md:flex-wrap text-gray-500 text-sm">
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Sign Up</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Log I</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Messenger</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Facebook Lite</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Video</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Place</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Games</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                        <li class="mr-3">
+                            <a href="#" class="hover:underline">Lorem</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="pt-4 text-xs text-gray-600 text-center md:text-left">
+                    <p>Meta &copy; 2023</p>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
