facebook focus adjustments / start amazon clone

--- a/9. facebook-login-clone/src/index.html
+++ b/9. facebook-login-clone/src/index.html
@@ -18,8 +18,8 @@
                     <div class="md:w-396px md:place-self-end">
                         <div class="bg-white p-4 md:border md:shadow-xl rounded-md">
                             <form class="flex flex-col">
-                                <input type="text" placeholder="Email or phone number" class=" flex-1 p-3 mb-2 md:mb-3 rounded md:rounded-md border border-gray-300 bg-gray-200 md:bg-white text-sm md:text-base placeholder-gray-600 md:placeholder-gray-300">
-                                <input type="password" placeholder="Password" class=" flex-1 p-3 mb-3 rounded md:rounded-md border border-gray-300 bg-gray-200 md:bg-white text-sm md:text-base placeholder-gray-600 md:placeholder-gray-300">
+                                <input type="text" placeholder="Email or phone number" class=" flex-1 p-3 mb-2 md:mb-3 rounded md:rounded-md border border-gray-300 bg-gray-200 md:bg-white text-sm md:text-base placeholder-gray-600 md:placeholder-gray-300 outline-none focus:shadow-sm focus:border-blue-500 focus:shadow-main-blue" required>
+                                <input type="password" placeholder="Password" class=" flex-1 p-3 mb-3 rounded md:rounded-md border border-gray-300 bg-gray-200 md:bg-white text-sm md:text-base placeholder-gray-600 md:placeholder-gray-300 outline-none focus:shadow-sm focus:border-blue-500 focus:shadow-main-blue" required>
                                 <input type="submit" value="Log In" class="flex-1 bg-main-blue hover:bg-main-blue-hover cursor-pointer text-white font-bold text-xl py-2 mb-3 rounded-md">
                             </form>
                             <div class="flex flex-col divide-y divide-gray-300 text-center mt-2 md:mt-0">
