--- a/10. amazon-clone/src/index.html
+++ b/10. amazon-clone/src/index.html
@@ -6,8 +6,48 @@
         <title>Amazon - Clone</title>
         <link rel="shortcut icon" href="../src/img/amazon.ico" type="image/x-icon">
         <link rel="stylesheet" href="../dist/output.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
-        
+        <header>
+            <div class="grid text-white">
+                <div class="flex flex-wrap md:flex-no-wrap bg-darkblue-900 px-2 py-1 items-center">
+                    <div class="px-2 py-1 md:border border border-gray-700 hover:border-white rounded">
+                        <i class="fas fa-bars text-2xl"></i>
+                    </div>
+                    <div class="flex mx-2 py-2 border border-transparent hover:border-white">
+                        <img src="../src/img/amazon_logo.png" alt="Logo Amazon" class="h-7">
+                        <span class="text-xs pl-1 pt-1">.com</span>
+                    </div>
+                    <div class="w-full md:w-auto flex-grow md:ml-3 md:mr-0 pt-1 order-2 md:order-none">
+                        <form action="" class="flex">
+                            <select name="" id="" class="hidden md:block p-2 text-xs text-gray-700 bg-gray-100 hover:bg-gray-300 rounded-tl rounded-bl border-r border-gray-500">
+                                <option value="">Books</option>
+                            </select>
+                            <input type="text" class="p-2 flex-grow rounde-l md:rounded-none">
+                            <button class="px-4 bg-gold-100 hover:bg-gold-200 rounded-tr rounded-br">
+                                <i class="fas fa-search text-darkblue-900 text-xl mt-1"></i>
+                            </button>
+                        </form>
+                    </div>
+                    <div class="hidden md:block ml-2 pb-1 text-xs border border-transparent hover:border-white rounded-sm p-2">
+                        <p class="font-extrabold text-sm">EN <i class="fas fa-chevron-down text-xs"></i></p>
+                    </div>
+                    <div class="hidden md:block pb-1 text-xs border border-transparent hover:border-white rounded-sm p-2">
+                        <p class="leading-3">Hello, sign in</p>
+                        <p class="font-bold text-sm">Account & Lists <i class="fas fa-chevron-down text-xs"></i></p>
+                    </div>
+                    <div class="hidden md:block pb-1 text-xs border border-transparent hover:border-white rounded-sm p-2">
+                        <p class="leading-3">Returns</p>
+                        <p class="font-bold text-sm">& Orders</p>
+                    </div>
+                    <div class="p-2 border border-transparent hover:border-white rounded-sm absolute right-0 top-0 mr-2 mt-2 md:mr-0 md:mt-0 md:relative order-1 md:order-none md:flex">
+                        <i class="fas fa-shopping-cart flex text-2xl md:mr-2"></i>
+                        <span class="font-semibold text-gold-200 text-base absolute top-0 left-0 -mt-1 ml-4 text-center h-6 w-6 bg-dark-blue-600 rounded-full">0</span>
+                        <span class="hidden md:flex font-bold text-base">Cart</span>
+                    </div>
+                </div>
+            </div>
+        </header>  
     </body>
 </html>
