--- a/10. amazon-clone/src/index.html
+++ b/10. amazon-clone/src/index.html
@@ -11,6 +11,7 @@
     <body>
         <header>
             <div class="grid text-white">
+                <!-- HEADER SUPERIOR -->
                 <div class="flex flex-wrap md:flex-no-wrap bg-darkblue-900 px-2 py-1 items-center">
                     <div class="px-2 py-1 md:border border border-gray-700 hover:border-white rounded">
                         <i class="fas fa-bars text-2xl"></i>
@@ -46,6 +47,89 @@
                         <span class="font-semibold text-gold-200 text-base absolute top-0 left-0 -mt-1 ml-4 text-center h-6 w-6 bg-dark-blue-600 rounded-full">0</span>
                         <span class="hidden md:flex font-bold text-base">Cart</span>
                     </div>
+                </div>
+                <!-- HEADER MIDDLE -->
+                <div class="flex bg-dark-blue-600 text-sm px-2 py-1 items-center">
+                    <div class="address-container">
+                        <div class="mr-1">
+                            <i class="fas fa-map-marker-alt text-xl"></i>
+                        </div>
+                        <div class="flex md:block leading-tight text-xs">
+                            <p class="mx-1 md:mx-0">Hello,</p>
+                            <p class="font-bold">Update location</p>
+                        </div>
+                    </div>
+                    <div class="hidden md:block">
+                        <nav>
+                            <ul class="flex ml-14 text-sm">
+                                <li class="item-nav-mid">
+                                    <a href="#">Gift Cards</a>
+                                </li>
+                                <li class="item-nav-mid">
+                                    <a href="#">Best Sellers</a>
+                                </li>
+                                <li class="item-nav-mid">
+                                    <a href="#">Deals Store</a>
+                                </li>
+                                <li class="item-nav-mid">
+                                    <a href="#">New Release</a>
+                                </li>
+                                <li class="item-nav-mid">
+                                    <a href="#">Prime <i class="fas fa-chevron-down text-xs"></i></a>
+                                </li>
+                                <li class="item-nav-mid">
+                                    <a href="#">Gift Ideas</a>
+                                </li>
+                                <li class="item-nav-mid">
+                                    <a href="#">Audible</a>
+                                </li>
+                                <li class="item-nav-mid">
+                                    <a href="#">Electronics</a>
+                                </li>
+                                <li class="item-nav-mid">
+                                    <a href="#">Home</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <!-- BOTTOM HEADER -->
+                <div class="flex text-black text-xs border-b border-gray-300 bg-gray-100 px-4 pt-1">
+                    <ul class="hidden md:flex">
+                        <li class="item-nav-bot font-bold">
+                            <a href="#">Books</a>
+                        </li>
+                        <li class="item-nav-bot font-medium">
+                            <a href="#">Advanced Search</a>
+                        </li>
+                        <li class="item-nav-bot font-medium">
+                            <a href="#">Today's Deals</a>
+                        </li>
+                        <li class="item-nav-bot font-medium">
+                            <a href="#">New Releases</a>
+                        </li>
+                        <li class="item-nav-bot font-medium">
+                            <a href="#">Amazon Charts</a>
+                        </li>
+                        <li class="item-nav-bot font-medium">
+                            <a href="#">Best Sellers & More</a>
+                        </li>
+                        <li class="item-nav-bot font-medium">
+                            <a href="#">The Globe & Mail Best Sellers</a>
+                        </li>
+                        <li class="item-nav-bot font-medium">
+                            <a href="#">New York Times Best Sellers</a>
+                        </li>
+                        <li class="item-nav-bot font-medium">
+                            <a href="#">Best Books of the Month</a>
+                        </li>
+                        <li class="item-nav-bot font-medium">
+                            <a href="#">Children's Books</a>
+                        </li>
+                        <li class="item-nav-bot font-medium">
+                            <a href="#">Textbooks</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </header>  
