(wip) main - nav bar

--- a/10. amazon-clone/src/index.html
+++ b/10. amazon-clone/src/index.html
@@ -132,6 +132,122 @@
                     </ul>
                 </div>
             </div>
-        </header>  
+        </header>
+        <main>
+            <div class="grid grid-cols-6">
+                <!-- LEFT NAVBAR -->
+                <div class="col-span-1 h-screen hidden md:block pl-2 my-2 border-r-2 border-gray-300 text-xs">
+                    <h3 class="font-bold">Book Stores</h3>
+                    <ul class="pl-2 mb-2">
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">English Books</a>
+                        </li>
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">French Books</a>
+                        </li>
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">Kindle Books</a>
+                        </li>
+                    </ul>
+
+                    <h3 class="font-bold">Seasonal Picks</h3>
+                    <ul class="pl-2 mb-2">
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">Back to school</a>
+                        </li>
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">Summer Reading</a>
+                        </li>
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">Spook Reads</a>
+                        </li>
+                    </ul>
+
+                    <h3 class="font-bold">Popular Features</h3>
+                    <ul class="pl-2 mb-2">
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">Today's Deals</a>
+                        </li>
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">Award-Winning Books</a>
+                        </li>
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">Canadian Books</a>
+                        </li>
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">100 Canadian Books to Read in a Lifetime</a>
+                        </li>
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">From Page to Screen</a>
+                        </li>
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">First Novel Awards</a>
+                        </li>
+                    </ul>
+
+                    <h3 class="font-bold">Featured Stores</h3>
+                    <ul class="pl-2 mb-2">
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">Globe and Mail Best Sellers</a>
+                        </li>
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">New York Times Best Seller</a>
+                        </li>
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">For Dummies Store</a>
+                        </li>
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">Wiley's Professional Central</a>
+                        </li>
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">Jenny Han Books</a>
+                        </li>
+                    </ul>
+
+                    <h3 class="font-bold">Textbooks</h3>
+                    <ul class="pl-2 mb-2">
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">New & Used Textbooks</a>
+                        </li>
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">Prime Student</a>
+                        </li>
+                    </ul>
+
+                    <h3 class="font-bold">Kindle</h3>
+                    <ul class="pl-2 mb-2">
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">Kindle eBooks</a>
+                        </li>
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">Kindle Deals</a>
+                        </li>
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">Kindle Reading Apps</a>
+                        </li>
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">Kindle Unlimited</a>
+                        </li>
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">Prime Reading</a>
+                        </li>
+                    </ul>
+
+                    <h3 class="font-bold">Audible Audiobooks</h3>
+                    <ul class="pl-2 mb-2">
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">Audiobooks</a>
+                        </li>
+                        <li class="text-gray-800 hover:text-orange-650">
+                            <a href="#">Audible Membership</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- MAIN CONTENT -->
+                <div class="col-span-5 h-screen">
+
+                </div>
+            </div>
+        </main>  
     </body>
 </html>
