(wip) main section - banner

--- a/10. amazon-clone/src/index.html
+++ b/10. amazon-clone/src/index.html
@@ -244,8 +244,10 @@
                     </ul>
                 </div>
                 <!-- MAIN CONTENT -->
-                <div class="col-span-5 h-screen">
-
+                <div class="col-span-6 md:col-span-5 p-2">
+                    <div class="hidden md:block">
+                        <a href="#"><img src="../src/img/GOGA-AFR-KBHP-desktop-1500x300-CA-ENG.jpg" alt="Promo"></a>
+                    </div>
                 </div>
             </div>
         </main>  
