(wip) footer - amazon

--- a/10. amazon-clone/src/index.html
+++ b/10. amazon-clone/src/index.html
@@ -44,12 +44,12 @@
                     </div>
                     <div class="p-2 border border-transparent hover:border-white rounded-sm absolute right-0 top-0 mr-2 mt-2 md:mr-0 md:mt-0 md:relative order-1 md:order-none md:flex">
                         <i class="fas fa-shopping-cart flex text-2xl md:mr-2"></i>
-                        <span class="font-semibold text-gold-200 text-base absolute top-0 left-0 -mt-1 ml-4 text-center h-6 w-6 bg-dark-blue-600 rounded-full">0</span>
+                        <span class="font-semibold text-gold-200 text-base absolute top-0 left-0 -mt-1 ml-4 text-center h-6 w-6 bg-darkblue-600 rounded-full">0</span>
                         <span class="hidden md:flex font-bold text-base">Cart</span>
                     </div>
                 </div>
                 <!-- HEADER MIDDLE -->
-                <div class="flex bg-dark-blue-600 text-sm px-2 py-1 items-center">
+                <div class="flex bg-darkblue-600 text-sm px-2 py-1 items-center">
                     <div class="address-container">
                         <div class="mr-1">
                             <i class="fas fa-map-marker-alt text-xl"></i>
@@ -378,6 +378,108 @@
                     </div> 
                 </div>
             </div>
-        </main>  
+        </main>
+        <footer class="flex flex-col text-white">
+            <div class="py-4 text-center bg-darkblue-600 hover:bg-darkblue-500 text-sm cursor-pointer">
+                <p>Back to top</p>
+            </div>
+            <div class="flex flex-wrap md:flex-nowrap md:justify-around py-10 px-10 md:px-20 bg-darkblue-700">
+                <div class="w-1/2 md:w-auto mb-4 md:mb-0">
+                    <h4 class="font-bold mb-2">Get to Know Us</h4>
+                    <ul class="text-xs w-3/4">
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Careers</a>
+                        </li>
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Amazon and Our Planet</a>
+                        </li>
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Investor Relations</a>
+                        </li>
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Press Releases</a>
+                        </li>
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Amazon Science</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="w-1/2 md:w-auto mb-4 md:mb-0">
+                    <h4 class="font-bold mb-2">Make Money with Us</h4>
+                    <ul class="text-xs w-3/4">
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Sell on Amazon</a>
+                        </li>
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Supply to Amazon</a>
+                        </li>
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Become an Affiliate</a>
+                        </li>
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Protect & Build Your Brand</a>
+                        </li>
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Sell on Amazon Handmade</a>
+                        </li>
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Advertise Your Products</a>
+                        </li>
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Independently Publish with Us</a>
+                        </li>
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Host an Amazon Hub</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="w-1/2 md:w-auto mb-4 md:mb-0">
+                    <h4 class="font-bold mb-2">Amazon Payment Products</h4>
+                    <ul class="text-xs w-3/4">
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Amazon.ca Rewards Mastercard</a>
+                        </li>
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Shop with Points</a>
+                        </li>
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Reload Your Balance</a>
+                        </li>
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Amazon Currency Converter</a>
+                        </li>
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Gift Cards</a>
+                        </li>
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Amazon Cash</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="w-1/2 md:w-auto mb-4 md:mb-0">
+                    <h4 class="font-bold mb-2">Let Us Help You</h4>
+                    <ul class="text-xs w-3/4">
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Shipping Rates & Policies</a>
+                        </li>
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Amazon Prime</a>
+                        </li>
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Return Are Easy</a>
+                        </li>
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Manage your Content and Devices</a>
+                        </li>
+                        <li class="mb-2 text-gray-400 hover:underline leading-4">
+                            <a href="#">Customer Service</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </footer>  
     </body>
 </html>
